# meta-pytorchhackathon

./: Dockerfile  README.md  app.py  client.py  environment.py  evaluate.py  git_log.txt  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh  tasks.py
backend/: agent.py  app.py  environment.py  grader.py  run.py  tasks.py
backend/env/: __init__.py  environment.py
backend/grader/: __init__.py  grader.py
backend/llm/: __init__.py  client.py
backend/tasks/: __init__.py  tasks.py
frontend/: index.html
server/: __init__.py  app.py
